# routellm

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  DESIGN.md  README.md
.planning/: STATE.md
.planning/quick/260407-oo3-claude-code-llmrouter-claude/: 260407-oo3-SUMMARY.md
.planning/quick/260407-ryn-claude-claude-semantic-core-responses-pr/: 260407-ryn-PLAN.md  260407-ryn-SUMMARY.md
.planning/quick/260407-t0k-claude-provider-capability-profile-respo/: 260407-t0k-PLAN.md  260407-t0k-SUMMARY.md
.planning/quick/260407-tc7-claude-strict-responses-compat-responses/: 260407-tc7-PLAN.md  260407-tc7-SUMMARY.md
.planning/quick/260407-ts1-claude-code-claude-messages-contract-tes/: 260407-ts1-PLAN.md  260407-ts1-SUMMARY.md
examples/: bootstrap.sql  llmrouter.service  llmrouter.toml  metapi.service  metapi.toml  routellm.service
migrations/: 0001_init.sql  0002_manual_block.sql  0003_channel_protocol.sql  0004_request_usage_and_channel_latency.sql  0005_protocol_messages.sql  0006_request_log_route_snapshot.sql  0007_channel_needs_reprobe.sql  0008_request_log_claude_request_snapshot.sql
scripts/: build-release.ps1  build-release.sh  install-local.ps1  install-local.sh  install-server.ps1  install-server.sh  install-tui.ps1  install-tui.sh  uninstall-local.ps1  uninstall-local.sh
src/: app.rs  bootstrap.rs  cc_switch.rs  config.rs  domain.rs  error.rs  http.rs  lib.rs  main.rs  protocol.rs  routing.rs  store.rs
src/claude/: mod.rs  provider_capability_profile.rs  responses_adapter.rs  semantic_core.rs
src/claude/fixtures/: claude_code_http_compat_message.json  (+16 more)
(+7 files in other folders)
