[package]
name = "llmrouter"
version = "1.3.1"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", default-features = false, features = ["http1", "json", "query", "tokio"] }
base64 = "0.22.1"
crossterm = { version = "0.29.0", default-features = false, features = ["event-stream"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm_0_29"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate"] }
thiserror = "2.0.18"
tokio = { version = "1.51.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.18"
toml = "1.1.2"
tracing = { version = "0.1.41", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.20", default-features = false, features = ["fmt"] }
uuid = { version = "1.23.0", features = ["v4"] }

[dev-dependencies]
tempfile = "3.23.0"
tower = { version = "0.5.2", features = ["util"] }

[target."cfg(windows)".dependencies]
clipboard-win = "5.4.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
